--- a/AI-102/lp01.md
+++ b/AI-102/lp01.md
@@ -2,3 +2,91 @@
 
 https://learn.microsoft.com/ja-jp/training/paths/prepare-for-ai-engineering/
 
+- モジュール01 Azure 上で AI ソリューションの開発を準備する
+  - [人工知能とは](https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/2-define-artificial-intelligence)
+  - [データサイエンス/機械学習/人工知能](https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/3-understand-ai-related-terms)
+  - [AI エンジニアにとっての考慮事項](https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/4-understand-considerations-for-ai-engineers)
+  - [責任ある AI に関する考慮事項](https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/5-understand-considerations-for-responsible-ai)
+  - [Azure Machine Learning](https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/6-understand-capabilities-of-azure-machine-learning)
+  - [Azure Cognitive Service](https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/7-understand-capabilities-of-azure-cognitive-services)
+  - [Azure Bot Service](https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/8-understand-capabilities-of-azure-bot-service)
+  - [Azure Cognitive Search](https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/9-understand-capabilities-of-azure-cognitive-search)
+
+■機械学習（マシンラーニング）とは？
+
+https://learn.microsoft.com/ja-jp/training/modules/use-automated-machine-learning/2-what-is-ml
+
+大量のデータを機械（コンピューター）に与えて学習させ、新しいデータの分類や判断、予測などを行えるようにすること。
+
+たとえば、たくさんの「犬の画像」と「猫の画像」を機械（コンピューター）に学習させることで、犬と猫の画像を認識する「機械学習モデル」を構築する（トレーニング）・
+
+「機械学習モデル」に、新しい画像を与えると、「これは犬」「これは猫」といったように画像の分類や認識ができるようになる。
+
+対応するAzureサービス: Azure Machine Learning
+
+■AI（人工知能）とは？
+
+https://learn.microsoft.com/ja-jp/training/modules/get-started-ai-fundamentals/1-introduction
+
+人間の行動と能力を模倣するソフトウェア。
+
+人の持つ判断・認知・情報処理の一部をコンピューターで実現するもの。
+
+音声の認識、画像の認識、テキストの認識、音声の聞き取り、翻訳などを行える。
+
+AIは、機械学習モデルを利用して実装される（ことが多い）。
+
+対応するAzureサービス: Azure Cognitive Service
+
+■Azure Machine Learningとは？
+
+https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/6-understand-capabilities-of-azure-machine-learning
+
+「機械学習モデル」のトレーニング、デプロイ、管理、監視のためのクラウド プラットフォーム。
+
+独自の「機械学習モデル」を構築したい場合に使用する。
+
+■Azure Cognitive Serviceとは？
+
+https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/7-understand-capabilities-of-azure-cognitive-services
+
+あらかじめトレーニング済みの、すぐに使えるAIパーツを提供するサービス。
+
+言語・音声・視覚・決定などのAPIを提供する。
+
+■Azure Bot Serviceとは？
+
+https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/8-understand-capabilities-of-azure-bot-service
+
+対話型の「チャットボット」を構築・運用するためのサービス。
+
+- C#などのコードを使用して、ボットを作成するには、「Bot Framework SDK」を使用する。
+- コードを書かずに、ボットを作成するには、「Bot Framework Composer」を使用する。
+- 作成したボットをテストするには、「Bot Framework Emulator」を使用する。
+- 作成したボットをAzureで運用するには、「Azure Bot Service」を使用する。
+- エンドユーザーは、Microsoft Teamsなどを通じて、「Azure Bot Service」で運用されているボットを利用できる。
+
+「チャットボット」に、AIなどを組み込むことで、よりインテリジェントな（便利な）チャットボットを作成できる。
+
+■Azure Cognitive Searchとは？
+
+https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/9-understand-capabilities-of-azure-cognitive-search
+
+フル マネージドのクラウド検索サービス。たとえば、大量のPDFドキュメントを読み込ませて「インデックス」を作成し、それを使用してさまざまな検索を実行できる。
+
+■責任あるAI
+
+https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutions-azure/5-understand-considerations-for-responsible-ai
+
+Microsoft では、「責任ある AI」という考え方を採用している。
+
+
+- AIシステムではすべての人を公平に扱う必要がある。
+  - 性別、民族などで差別をしない。
+- AIシステムが、安全かつ確実に実行されるようにする。
+  - 薬の処方・自動運転などでは安全性が極めて重要。
+- AIシステムが、プライバシーを尊重する必要がある。
+  - AIに入力されたデータのプライバシーを守る。
+
+Microsoft のAI技術を利用するユーザーにも、Microsoftの「責任ある AI」の考え方に同意することを求めている。
+
