--- a/AI-102/lp02.md
+++ b/AI-102/lp02.md
@@ -1,3 +1,48 @@
 # ラーニングパス02 Azure Cognitive Services のプロビジョニングと管理
 
 https://learn.microsoft.com/ja-jp/training/paths/provision-manage-azure-cognitive-services/
+
+- モジュール1 Cognitive Servicesの作成
+  - リソースの作成
+  - エンドポイントとキー
+  - REST API
+  - SDK
+  - ラボ01 Cognitive Servicesを使用する(言語の検出)
+- モジュール2 保護
+  - 認証
+    - キーの再生成
+    - トークンベース認証
+    - Azure Active Directory認証
+  - ネットワークセキュリティ
+  - ネットワーク アクセスの制限
+    - サービスエンドポイント
+    - プライベートエンドポイント
+  - ラボ02 セキュリティ
+- モジュール3 監視
+  - コスト監視
+  - アラート作成
+  - メトリック
+  - 診断ログ
+  - ラボ03 モニタリング
+- モジュール4 コンテナー
+  - コンテナーとは
+  - Cognitive Servicesコンテナーを使用する
+  - ラボ04 コンテナー
+
+■ ラボ手順書
+
+英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer
+
+日本語翻訳版（若干古い可能性があります）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp
+
+ラボのファイル（ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master.zip
+
+■ ラボの概要
+
+- ラボ01 Cognitive Servicesを使用する(言語の検出)
+- ラボ02 セキュリティ
+- ラボ03 モニタリング
+- ラボ04 コンテナー
