--- a/AI-102/lp04.md
+++ b/AI-102/lp04.md
@@ -1,1 +1,23 @@
 # ラーニングパス04 Azure Cognitive Speech Services を使用し、音声を処理して翻訳する
+
+https://learn.microsoft.com/ja-jp/training/paths/process-translate-speech-azure-cognitive-speech-services/
+
+- モジュール1 音声サービスを使用して音声対応アプリを作成する
+- モジュール2 音声を音声サービスで翻訳する
+
+
+■ ラボ手順書
+
+英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer
+
+日本語翻訳版（若干古い可能性があります）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp
+
+ラボのファイル（ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master.zip
+
+■ ラボの概要
+
+- ラボ07 スピーチ
+- ラボ08 スピーチ翻訳
