--- a/AI-102/lp05.md
+++ b/AI-102/lp05.md
@@ -1,1 +1,55 @@
-# ラーニングパス05 Azure Cognitive Services を使用して Language Understanding ソリューションを作成する
+# ラーニングパス05 Azure Cognitive Services を使用して「会話言語理解（CLU）」ソリューションを作成する
+
+※「会話言語理解」（Conversational Language Understanding、CLU）
+
+- モジュール1 CLU モデルを構築する
+- モジュール2 CLU アプリを発行して使用する
+
+■注: LUISからCLUへの以降が必要
+
+https://azure.microsoft.com/ja-jp/updates/language-understanding-retirement/
+
+- Language Understanding Intelligent Service (LUIS):
+  - [2017 年 12 月 13 日に発表されたサービス。](https://satonaoki.wordpress.com/2017/12/17/announcing-the-general-availability-of-azure-bot-service-and-language-understanding-enabling-developers-to-build-better-conversational-bots/)
+  - 2023 年 4 月 1 日以降、新しいリソースを作成することはできなくなる。
+  - 2025 年 10 月 1 日に、サービスは廃止される。
+  - LUISのユーザーは、CLUへの移行が必要。
+    - [移行方法のドキュメントが提供される](https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/conversational-language-understanding/how-to/migrate-from-luis?tabs=luis-portal)
+  - [2023 年 2 月 2 日以降、認定試験の「スキル領域」が、LUISからCLUに変更される](https://learn.microsoft.com/ja-jp/certifications/resources/study-guides/ai-102#change-log)
+- Conversational Language Understanding (CLU):
+  - 「会話言語理解」とも
+  - [2022 年 6 月 1 日に一般提供が開始されている。](https://azure.microsoft.com/ja-jp/updates/general-availability-conversational-language-understanding/)
+  - LUISに代わる新しいサービス。
+
+
+■CLU (Conversational Language Understanding) について
+
+CLUは、ユーザーの発話（utterance）から、その「意図」と「エンティティ」を認識する部分の処理を担当する。
+
+例1: ユーザーの発話（utterance）:「3分のタイマーを設定して。」
+
+→ ユーザーの意図（ユーザーがやりたいこと）: タイマーのセット
+→ エンティティ: 時間: 3分
+
+例2: ユーザーの発話（utterance）「品川に移動するには？」
+
+→ ユーザーの意図（インテント）: 交通手段の検索
+→ エンティティ: 場所: 品川
+
+例3: ユーザーの発話（utterance）「シーフードのピザを2枚注文して。」
+
+→ ユーザーの意図: ピザの注文
+→ エンティティ: 商品: シーフードピザ、数量: 2枚
+
+CLUは、会話の意図（タイマーのセット、交通手段の検索、ピザの注文など）と、そこに含まれるエンティティを認識するところまでを担当する。
+
+意図に対応するを実際の処理は、別の部分で（たとえばC#を使用したり、外部のAPIを呼び出したりして）実装する。
+
+■ トレーニング
+
+CLUでは、意図やエンティティは、あらかじめいくつかの会話パターンでトレーニングしておく。つまり、サンプルのテキストで学習させておく。
+
+■ ラボの概要
+
+- [ラボ09 「会話言語理解(CLU)」リソースの作成](lab09.md)
+- [ラボ10 「会話言語理解(CLU)」を使用するアプリの作成](lab10.md)
