--- a/AI-102/lp06.md
+++ b/AI-102/lp06.md
@@ -2,10 +2,30 @@
 
 https://learn.microsoft.com/ja-jp/training/paths/build-qna-solution/
 
+- モジュール1 質問応答ソリューションを構築する
+
+
+■ ラボ手順書
+
+英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer
+
+日本語翻訳版（若干古い可能性があります）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp
+
+ラボのファイル（ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master.zip
+
+■ ラボの概要
+
+- ラボ12 QandA
+
+---
+
+
 Language サービス リソース
 
 
 Language Studio ポータルを使用して質問と回答プロジェクトを作成
 
 ナレッジ ベースにソースを追加
-
