--- a/AI-102/lp07.md
+++ b/AI-102/lp07.md
@@ -1,1 +1,34 @@
 # ラーニングパス07 カスタム テキスト分析ソリューションを構築する
+
+https://learn.microsoft.com/ja-jp/training/paths/build-custom-text-analytics/
+
+- モジュール1 カスタム テキスト分類ソリューション
+- モジュール2 カスタム固有表現認識
+- ※このラーニングパスのラボはありません。
+
+■テキスト分類とは？
+
+テキスト分類: テキストに対して「ラベル」を割り当てる処理。ジャンル分け。
+
+■NER(Named Entity Recognition)とは？
+
+一般的には「固有表現抽出」とも。
+
+https://ja.wikipedia.org/wiki/%E5%9B%BA%E6%9C%89%E8%A1%A8%E7%8F%BE%E6%8A%BD%E5%87%BA
+
+NER 機能は、非構造化テキスト内のエンティティを識別および分類できます。
+
+たとえば、人の名前、場所、組織、数量、メール、URL、IPアドレス、日付・時刻など。
+
+■カスタムNERとは？
+
+[カスタムNER(Named Entity Recognition)](https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/custom-named-entity-recognition/overview)
+
+カスタム NER を使用すると、ユーザーはカスタム AI モデルを作成して、テキストから、業界固有のエンティティを抽出できます。
+
+例えば、金融業界で扱われるテキストに現れる、契約日、契約者、借入金額、利息、事務手数料など。
+
+■ ラボの概要
+
+※このラーニングパスのラボはありません。
+
