--- a/AI-102/lp09.md
+++ b/AI-102/lp09.md
@@ -1,1 +1,37 @@
 # ラーニングパス09 Azure Cognitive Services でコンピューター ビジョン ソリューションを作成する
+
+https://learn.microsoft.com/ja-jp/training/paths/create-computer-vision-solutions-azure-cognitive-services/
+
+
+- 画像を分析する
+- 動画を分析する
+- 画像を分類する
+- 画像内のオブジェクトを検出する
+- 顔を検出、分析、認識する
+
+■Face APIについて
+
+https://azure.microsoft.com/ja-jp/updates/facelimitedaccess/
+
+https://cptechweb.teldevice.co.jp/hc/ja/articles/8632634468249--%E9%87%8D%E8%A6%81-Cognitive-Services-Face-API-%E3%81%AE%E5%BB%83%E6%AD%A2%E3%81%A8%E5%88%A9%E7%94%A8%E5%88%B6%E9%99%90%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6
+
+https://www.itmedia.co.jp/news/articles/2206/22/news086.html
+
+■ ラボ手順書
+
+英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer
+
+日本語翻訳版（若干古い可能性があります）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp
+
+ラボのファイル（ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master.zip
+
+■ ラボの概要
+
+- ラボ15 コンピュータビジョン
+- ラボ16 ビデオインデクサー
+- ラボ17 イメージ分類
+- ラボ18 オブジェクト検出
+- ラボ19 フェース
