--- a/AI-102/lp11.md
+++ b/AI-102/lp11.md
@@ -1,1 +1,11 @@
 # ラーニングパス11 Azure Cognitive Search でのナレッジ マイニングの実装
+
+https://learn.microsoft.com/ja-jp/training/paths/implement-knowledge-mining-azure-cognitive-search/
+
+- Azure Cognitive Search ソリューションを作成する
+- [ラボ22 検索ソリューションの開発](lab22.md)
+
+Azure Cognitive Search (旧称 Azure Search) は、Web、モバイル、エンタープライズ アプリケーションに、プライベートでヘテロジニアスな（さまざまな種類の・均一ではない）コンテンツに対するリッチな検索エクスペリエンスを組み込むためのインフラストラクチャ、API、およびツールを開発者に提供するクラウド検索サービスです。
+
+ドキュメントにインデックスを付け、高度な検索を実現します。
+
