--- a/AI-102/lp03.md
+++ b/AI-102/lp03.md
@@ -1,141 +1,17 @@
 # ラーニングパス03 Azure Cognitive Services を使用してテキストを処理して翻訳する
 
-https://learn.microsoft.com/ja-jp/training/paths/process-translate-text-azure-cognitive-services/
-
-言語サービスを使用してテキストから分析情報を抽出する
-https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/language-detection/quickstart?pivots=programming-language-csharp
-
-Translator サービスを使用してテキストを翻訳する
-https://github.com/Nordes/CognitiveServices.Translator.Client
-
-### Cognitive Services マルチサービスアカウントの作成
-
-Azure portalで作成
-
-### プロジェクトの作成
-
-```sh
-dotnet new worker
-rm Worker.cs
-```
-
-### パッケージの追加
-
-```sh
-dotnet add package Microsoft.Extensions.Configuration.UserSecrets
-dotnet add package Azure.AI.TextAnalytics
-dotnet add package CognitiveServices.Translator.Client
-```
-
-### キーとエンドポイントの追加
-
-```sh
-dotnet user-secrets set 'CognitiveServices:SubscriptionKey' '...'
-dotnet user-secrets set 'CognitiveServices:Name' '...'
-dotnet user-secrets set 'CognitiveServices:Endpoint' '...'
-dotnet user-secrets set 'CognitiveServices:SubscriptionRegion' '...'
-```
-
-### `.editorconfig`の作成
-
-https://learn.microsoft.com/ja-jp/dotnet/fundamentals/code-analysis/quality-rules/ca1822
-
-```
-root = true
-
-[*.cs]
-# supress 'Member ... does not access instance data and can be marked as static'
-dotnet_diagnostic.CA1822.severity = none
-```
-
-### `Properties/launchSettings.json`の設定
-
-https://stackoverflow.com/questions/65923063/purpose-of-dotnetrunmessages-in-launchsettings-json
-
-```json
-{
-    ...
-      "dotnetRunMessages": false,
-    ...
-}
-```
-
-### `Program.cs` のコーディング
-
-```cs
-using Azure;
-using Azure.AI.TextAnalytics;
-using CognitiveServices.Translator.Extension;
-
-ConsoleApp
-.CreateBuilder(args)
-.ConfigureServices((context, services) =>
-{
-    var key = context.Configuration["CognitiveServices:SubscriptionKey"] ?? "";
-    var endpoint = new Uri(context.Configuration["CognitiveServices:Endpoint"] ?? "");
-    var cred = new AzureKeyCredential(key);
-    var client = new TextAnalyticsClient(endpoint, cred);
-    services.AddSingleton(client);
-    services.AddCognitiveServicesTranslator(context.Configuration);
-})
-.Build()
-.AddCommands<TranslateCommands>()
-.AddCommands<LanguageCommands>()
-.Run();
-```
-
-### `LanguageCommands.cs` のコーディング
-
-```cs
-using Azure.AI.TextAnalytics;
-
-class LanguageCommands : ConsoleAppBase
-{
-    public void Detect(TextAnalyticsClient client, string text)
-    {
-        DetectedLanguage detectedLanguage = client.DetectLanguage(text);
-        Console.WriteLine("Language:");
-        Console.WriteLine($"\t{detectedLanguage.Name},\tISO-6391: {detectedLanguage.Iso6391Name}\n");
-    }
-}
-```
-
-### `TranslateCommands.cs` のコーディング
-
-```cs
-using CognitiveServices.Translator;
-using CognitiveServices.Translator.Translate;
-
-class TranslateCommands : ConsoleAppBase
-{
-    public void Translate(ITranslateClient client, string text, string from, string to)
-    {
-        {
-            var response = client.Translate(
-                new RequestContent(text),
-                new RequestParameter
-                {
-                    From = from,
-                    To = new[] { to },
-                    IncludeAlignment = true
-                });
-            Console.WriteLine(response.First().Translations.First().Text);
-        }
-    }
-}
-```
-
-### 実行(言語検出)
-
-```sh
-dotnet run detect-language --text 'おはようございます'
-Language:
-        Japanese,       ISO-6391: ja
-```
-
-### 実行(翻訳)
-
-```sh
-$ dotnet run translate --text 'おはようございます' --from ja --to en
-Good morning
-```
+- モジュール1 言語サービスを使用してテキストから分析情報を抽出する
+  - リソースの作成
+  - 言語検出
+  - キー フレーズ抽出
+  - 感情分析
+  - エンティティ
+  - リンクされたエンティティ
+  - ラボ05 テキスト分析（感情分析・キーフレーズ抽出）
+- モジュール2 Translator サービスを使用してテキストを翻訳する
+  - リソースの作成
+  - 言語の検出、翻訳、表記変換
+  - 翻訳オプション
+  - カスタム翻訳
+  - ラボ
+  - [ラボ06 翻訳](lab06.md)
