--- a/AI-102/lp08.md
+++ b/AI-102/lp08.md
@@ -1,1 +1,32 @@
 # ラーニングパス08 会話 AI ソリューションを作成する
+
+https://learn.microsoft.com/ja-jp/training/paths/create-conversational-ai-solutions/
+
+- モジュール1 Bot Framework SDK を使用してボットを作成する
+  - ラボ13 ボット(TimeBot)の作成
+- モジュール2 Bot Framework Composer を使用してボットを作成する
+  - ラボ14 ボット(WeatherBot)の作成
+
+■ ラボ手順書
+
+英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer
+
+日本語翻訳版（若干古い可能性があります）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp
+
+ラボのファイル（ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master.zip
+
+■ ラボの概要
+
+- ラボ13 ボット(TimeBot)の作成
+- ラボ14 ボット(WeatherBot)の作成
+
+https://github.com/MicrosoftLearning/AI-102-AIEngineer/blob/master/Instructions/13-bot-framework.md
+
+https://github.com/MicrosoftLearning/AI-102-AIEngineer/blob/master/Instructions/14-bot-composer.md
+
+https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/13-bot-framework.md
+
+https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/14-bot-composer.md
