--- a/AI-102/lp10.md
+++ b/AI-102/lp10.md
@@ -1,1 +1,23 @@
 # ラーニングパス10 画像およびドキュメントからテキストを抽出する
+
+https://learn.microsoft.com/ja-jp/training/paths/extract-text-from-images-documents/
+
+- モジュール1 Computer Vision サービスを使用して画像やドキュメント内のテキストを読み取る
+- モジュール2 Form Recognizer を使用してフォームからデータを抽出する
+
+
+■ ラボ手順書
+
+英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer
+
+日本語翻訳版（若干古い可能性があります）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp
+
+ラボのファイル（ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります）
+https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master.zip
+
+■ ラボの概要
+
+- ラボ20 OCR
+- ラボ21 カスタムフォーム
