--- a/AI-102/lp02.md
+++ b/AI-102/lp02.md
@@ -42,7 +42,7 @@ https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master
 
 ■ ラボの概要
 
-- ラボ01 Cognitive Servicesを使用する(言語の検出)
+- [ラボ01 Cognitive Servicesを使用する(言語の検出)](lab01.md)
 - ラボ02 セキュリティ
 - ラボ03 モニタリング
 - ラボ04 コンテナー
