--- a/AI-102/lp02.md
+++ b/AI-102/lp02.md
@@ -29,20 +29,7 @@ https://learn.microsoft.com/ja-jp/training/paths/provision-manage-azure-cognitiv
   - Cognitive Servicesコンテナーを使用する
   - ラボ04 コンテナー
 
-■ ラボ手順書
 
-英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
-https://github.com/MicrosoftLearning/AI-102-AIEngineer
-
-日本語翻訳版（若干古い可能性があります）
-https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp
-
-ラボのファイル（ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります）
-https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master.zip
-
-■ ラボの概要
-
-- [ラボ01 Cognitive Servicesを使用する(言語の検出)](lab01.md)
-- ラボ02 セキュリティ
-- ラボ03 モニタリング
-- ラボ04 コンテナー
+- [ラボ02 セキュリティ](lab02.md)
+- [ラボ03 モニタリング](lab03.md)
+- [ラボ04 Cognitive Servicesコンテナー](lab04.md)
