--- a/AI-102/lp08.md
+++ b/AI-102/lp08.md
@@ -7,6 +7,56 @@ https://learn.microsoft.com/ja-jp/training/paths/create-conversational-ai-soluti
 - モジュール2 Bot Framework Composer を使用してボットを作成する
   - ラボ14 ボット(WeatherBot)の作成
 
+■Bot Framework Composer
+
+コードを書かずにボットを作成できるツール。
+
+デザイナー画面上でフローチャートのようなものを入力して、ボットを作成する。
+
+作成したボットをローカルで実行して動作を確認したり（Bot Framework Emulatorを背後で起動）、Azureにパブリッシュ（発行、公開）する機能なども持つ。
+
+■ボット
+
+C#またはNode.jsのボットを作成できる
+ボットに、AIのサービスを組み込むことができる。
+
+■日本語化
+
+日本語化が可能
+ただしすべてのUIが日本語化されるわけではない。
+左下＞Composer Settings＞composer lanuage＞日本語
+
+ボットの応答なども英語のまま。
+ただし、Configure＞Localization で、ボットの会話を日本語化（ローカライゼーション）することも可能。
+
+
+■最も簡単な使い方
+
+Bot Framework Composerを起動
+左メニュー＞ホーム＞作成＞Empty Bot
+
+画面右上の「Start bot」でボットを起動、「Webチャットを開始」をクリック
+
+画面右側にチャットのような画面が出てくる。画面右下でMessageをタイプすると、ボットが回答する。
+
+ただし、Empty Botは「Welcome to your bot」というあいさつをする他は、どんなメッセージにも「Sorry, I didn't get that」
+（わかりません）としか答えない。
+
+画面右上の「会話を再開します」をクリックすると、ここまでの会話をリセットできる。
+
+リセットすると、初期状態（あいさつ）からボットとの会話が始まる。
+
+■ボットの構造
+
+```
+ボット
+└ダイアログ
+  └トリガー
+    └アクション
+```
+
+
+
 ■ ラボ手順書
 
 英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
@@ -30,3 +80,4 @@ https://github.com/MicrosoftLearning/AI-102-AIEngineer/blob/master/Instructions/
 https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/13-bot-framework.md
 
 https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/14-bot-composer.md
+
