--- a/AI-102/lp02.md
+++ b/AI-102/lp02.md
@@ -2,34 +2,40 @@
 
 https://learn.microsoft.com/ja-jp/training/paths/provision-manage-azure-cognitive-services/
 
-- モジュール1 Cognitive Servicesの作成
-  - リソースの作成
-  - エンドポイントとキー
-  - REST API
-  - SDK
-  - ラボ01 Cognitive Servicesを使用する(言語の検出)
-- モジュール2 保護
-  - 認証
+■[モジュール1 Cognitive Servicesの作成](lp02-m01.md)
+
+- Cognitive Servicesのリソースの作成
+- エンドポイントとキー
+- 言語サービスのリソースの作成
+- ラボ01 言語サービスを使用して言語を検出する
+
+■モジュール2 Cognitive Servicesの保護
+
+- 認証
+  - キー認証
     - キーの再生成
-    - トークンベース認証
-    - Azure Active Directory認証
-  - ネットワークセキュリティ
-  - ネットワーク アクセスの制限
-    - サービスエンドポイント
-    - プライベートエンドポイント
-  - ラボ02 セキュリティ
+  - Azure Active Directory認証
+- ネットワーク アクセスの制限
+  - サービスエンドポイント
+  - プライベートエンドポイント
+- ラボ02 セキュリティ
+- [ラボ02 セキュリティ](lab02.md)
+
+■モジュール3
+
 - モジュール3 監視
   - コスト監視
   - アラート作成
   - メトリック
   - 診断ログ
   - ラボ03 モニタリング
+  - [ラボ03 モニタリング](lab03.md)
+
+■モジュール4
+
 - モジュール4 コンテナー
   - コンテナーとは
   - Cognitive Servicesコンテナーを使用する
-  - ラボ04 コンテナー
+  - [ラボ04 Cognitive Servicesコンテナー](lab04.md)
 
 
-- [ラボ02 セキュリティ](lab02.md)
-- [ラボ03 モニタリング](lab03.md)
-- [ラボ04 Cognitive Servicesコンテナー](lab04.md)
