--- a/AI-102/lp02-m01.md
+++ b/AI-102/lp02-m01.md
@@ -219,7 +219,7 @@ Azure Key Vault
 
 Language Studio（ https://language.cognitive.azure.com/ ）を使用すると、作成済みの「言語サービス」リソースを使った操作を簡単に試すことができる。
 
-Language Studioにアクセスする。サインインが求められた場合は、本トレーニング受講用に作成したMicrosoftアカウントでサインインする。
+Language Studioにアクセスする。サインインが求められた場合は、本トレーニング受講用に作成したMicrosoftアカウントでサインインする。（または、画面右上のSign inをクリック）
 
 はじめに「言語サービス」のリソースを選択する（この画面が出てこない場合や、リソースを切り替えたい場合は、画面右上をクリックし、「現在のリソース」の「選択」をクリック）
 
@@ -227,15 +227,35 @@ Resource Type: 「Language」を選択。
 
 Resource Name: 作成済みの「言語サービス」の名前を選択。
 
-「完了」をクリック。
+「完了（Done）」をクリック。
 
 ![](images/ss-2023-04-04-08-17-05.png)
+
+画面上部の歯車アイコンをクリックして、General の中で「Japanese」をクリックすると、Language Studioを日本語化できる。
 
 「テキストの分類」、「言語の検出」 の「使用の開始」をクリック
 
 ![](images/ss-2023-04-04-08-22-22.png)
 
+大きなテキストボックスに「こんにちは」などの日本語を適当に入力。
+
+「このデモを実行することで・・・」にチェック、実行。
+
+![](images/ss-2023-04-04-13-47-19.png)
+
+「結果」に、「日本語」といったように、検出された言語が表示される。
+
+![](images/ss-2023-04-04-13-54-16.png)
+
+他にもいくつかの言語で試してみよう:
+
+- 中国語で「ありがとう」: 谢谢
+- フランス語で「今何時？」: Quelle heure est-il
+
+
 ■ ラボの概要
+
+.NET (C#)のコンソールアプリから、Cognitive Servicesを使用する。
 
 - [ラボ01 Cognitive Servicesを使用する(言語の検出)](lab01.md)
 
@@ -249,4 +269,6 @@ Resource Name: 作成済みの「言語サービス」の名前を選択。
 - エンドポイント
 - キー
 - Cognitive Servicesの「言語サービス」リソースを作る
-- 
+- 「Language Studio」から「言語サービス」を利用する(言語の特定)
+- Cognitive Servicesの「マルチサービスアカウント」リソースを作る
+- C#プログラムから「マルチサービスアカウント」リソースを利用する(言語の特定)
