--- a/AI-102/lp02-m01.md
+++ b/AI-102/lp02-m01.md
@@ -1,5 +1,18 @@
 # Cognitive Servicesの基本的な知識
 
+■ここで学習すること
+
+- Cognitive Servicesのリソースの種類と違いについて確認する
+  - 「言語サービス」リソース
+  - 「音声サービス」リソース
+  - 「視覚サービス」リソース
+  - 「マルチサービスアカウント」リソース
+- Cognitive Servicesのリソースエンドポイントとキーについて確認する
+- Cognitive Servicesの「言語サービス」リソースを作る
+- 「Language Studio」から「言語サービス」を利用する(言語の特定)
+- Cognitive Servicesの「マルチサービスアカウント」リソースを作る
+- C#プログラムから「マルチサービスアカウント」リソースを利用する(言語の特定)
+
 ■Cognitive Servicesでできること（主なもの）
 
 https://learn.microsoft.com/ja-jp/azure/cognitive-services/what-are-cognitive-services
@@ -261,14 +274,15 @@ Resource Name: 作成済みの「言語サービス」の名前を選択。
 
 ■まとめ
 
-- Cognitive Servicesのリソースの種類
+- Cognitive Servicesのリソースの種類と違いについて確認しました。
   - 「言語サービス」リソース
   - 「音声サービス」リソース
   - 「視覚サービス」リソース
   - 「マルチサービスアカウント」リソース
-- エンドポイント
-- キー
-- Cognitive Servicesの「言語サービス」リソースを作る
-- 「Language Studio」から「言語サービス」を利用する(言語の特定)
-- Cognitive Servicesの「マルチサービスアカウント」リソースを作る
-- C#プログラムから「マルチサービスアカウント」リソースを利用する(言語の特定)
+- Cognitive Servicesのリソースエンドポイントとキーについて確認しました。
+- Cognitive Servicesの「言語サービス」リソースを作りました
+- 「Language Studio」から「言語サービス」を利用しました(言語の特定)
+- Cognitive Servicesの「マルチサービスアカウント」リソースを作りました
+- C#プログラムから「マルチサービスアカウント」リソースを利用しました(言語の特定)
+
+なおCognitive Servicesのリソースは特に削除しなくても（作成したままでも）コスト的には問題ありません。
