--- a/AI-102/lp02-m01.md
+++ b/AI-102/lp02-m01.md
@@ -84,8 +84,8 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/cognitive-services-ap
 
 | リソースの種類                       | 使える機能                              | 無料でも使える？ |
 | ------------------------------------ | --------------------------------------- | ---------------- |
-| 「言語サービス」リソース             | 「視覚サービス」の全機能                | Yes              |
-| 「音声サービス」リソース             | 「視覚サービス」の全機能                | Yes              |
+| 「言語サービス」リソース             | 「言語サービス」の全機能                | Yes              |
+| 「音声サービス」リソース             | 「音声サービス」の全機能                | Yes              |
 | 「視覚サービス」リソース             | 「視覚サービス」の全機能                | Yes              |
 | 「マルチサービスアカウント」リソース | 「言語」「音声」 「視覚」の基本的な機能 | No               |
 
