--- a/AI-102/lp02.md
+++ b/AI-102/lp02.md
@@ -9,33 +9,53 @@ https://learn.microsoft.com/ja-jp/training/paths/provision-manage-azure-cognitiv
 - 言語サービスのリソースの作成
 - ラボ01 言語サービスを使用して言語を検出する
 
-■モジュール2 Cognitive Servicesの保護
+■[モジュール2 Cognitive Servicesの保護](lp02-m02.md)
 
 - 認証
   - キー認証
-    - キーの再生成
+  - トークン認証
   - Azure Active Directory認証
 - ネットワーク アクセスの制限
   - サービスエンドポイント
   - プライベートエンドポイント
-- ラボ02 セキュリティ
-- [ラボ02 セキュリティ](lab02.md)
+- [ラボ02 Cognitive Service + Key Vault](lab02.md)
 
-■モジュール3
+■モジュール3 Cognitive Servicesの監視
 
-- モジュール3 監視
-  - コスト監視
-  - アラート作成
-  - メトリック
-  - 診断ログ
-  - ラボ03 モニタリング
-  - [ラボ03 モニタリング](lab03.md)
+- コスト監視
+  - Azureの標準的なコスト管理・監視の仕組みである [Microsoft Cost Management and Billing](https://learn.microsoft.com/ja-jp/azure/cost-management-billing/cost-management-billing-overview) (コストの分析)を使用する
+  - [解説資料](../AZ-304/mod12-01-cost-management.md)
+- [メトリック](https://learn.microsoft.com/ja-jp/azure/search/monitor-azure-cognitive-search#monitor-metrics)
+  - Cognitive Servicesの呼び出し回数などのメトリック（数値データ）を取得できる
+    - 「概要」や「メトリックエクスプローラー」で確認できる
+- アラート作成
+  - 「メトリックが特定のしきい値を超えた」といった条件を設定し、アラートを設定できる
+  - アラートがトリガーされた際、アクショングループが実行される
+- [リソースログ（診断ログ）](https://learn.microsoft.com/ja-jp/azure/cognitive-services/diagnostic-logging)
+  - 問題の識別やデバッグに使用されるリソースの操作に関する豊富で頻繁なデータが提供される
+    - Cognitive ServicesのAPI呼び出しなどが記録できる
+  - [以前は「診断ログ」と呼ばれていたが現在は「リソースログ」と呼ぶようになってきている](https://learn.microsoft.com/ja-jp/azure/azure-monitor/essentials/resource-logs-schema)
+  - 「診断設定」を作成し、リソースログが Log Analytics などに蓄積されるように設定する。
+  - 「診断設定」を作成しないと生成・蓄積されない
+  - 解説資料: [Log Analytics](../log-analytics/log-analytics.md)
+  - [参考サイト](https://blog.johtani.info/blog/2020/05/26/logging-azure-search-request/) ※このページは Cognitive Search についての解説だが、Cognitive Services と読み替えても良い
+    - 利用状況を監視する方法はいろいろあるが、「診断設定」が一番手軽で便利。アプリに手を入れたりログを収集する仕組みを作り込む必要がない。
 
-■モジュール4
+■モジュール4 Cognitive Servicesのコンテナー対応
 
-- モジュール4 コンテナー
-  - コンテナーとは
-  - Cognitive Servicesコンテナーを使用する
-  - [ラボ04 Cognitive Servicesコンテナー](lab04.md)
+- [コンテナー(Docker)とは](../AZ-400/mod15.md)
+- [Cognitive Servicesは、コンテナー内でも実行できる。](https://learn.microsoft.com/ja-jp/azure/cognitive-services/cognitive-services-container-support)
+- メリット
+  - データが処理される場所をユーザーが決定できる
+    - オンプレミス上のサーバーでCognitive Servicesコンテナーを実行できる
+  - 低遅延
+    - データの発生場所と近い所で、Cognitive Servicesコンテナーによるデータ処理を実行
+  - コンテナーが動くところであればどこでも実行できる
+    - Azure Container Instance
+    - Azure Kubernetes Service
+    - Azure Container Apps
+    - Azure IoT Edge
+    - オンプレや他クラウド上のKubernetesクラスター
+- [ラボ04 Cognitive Servicesコンテナー](lab04.md)
 
 
