--- a/AI-102/lp03.md
+++ b/AI-102/lp03.md
@@ -1,17 +1,19 @@
 # ラーニングパス03 Azure Cognitive Services を使用してテキストを処理して翻訳する
 
-- モジュール1 言語サービスを使用してテキストから分析情報を抽出する
-  - リソースの作成
-  - 言語検出
-  - キー フレーズ抽出
-  - 感情分析
-  - エンティティ
-  - リンクされたエンティティ
-  - ラボ05 テキスト分析（感情分析・キーフレーズ抽出）
-- モジュール2 Translator サービスを使用してテキストを翻訳する
-  - リソースの作成
-  - 言語の検出、翻訳、表記変換
-  - 翻訳オプション
-  - カスタム翻訳
-  - ラボ
-  - [ラボ06 翻訳](lab06.md)
+## モジュール1 言語サービスを使用してテキストから分析情報を抽出する
+
+- リソースの作成
+  - 「Cognitive Services言語サービス」を使用します
+- 言語検出
+- キー フレーズ抽出
+- 感情分析
+- エンティティ
+- リンクされたエンティティ
+
+## モジュール2 Translator サービスを使用してテキストを翻訳する
+
+- リソースの作成
+- 言語の検出、翻訳、表記変換
+- 翻訳オプション
+- カスタム翻訳
+- [ラボ06 翻訳](lab06.md)
