--- a/AI-102/lp02.md
+++ b/AI-102/lp02.md
@@ -28,6 +28,9 @@ https://learn.microsoft.com/ja-jp/training/paths/provision-manage-azure-cognitiv
 - [メトリック](https://learn.microsoft.com/ja-jp/azure/search/monitor-azure-cognitive-search#monitor-metrics)
   - Cognitive Servicesの呼び出し回数などのメトリック（数値データ）を取得できる
     - 「概要」や「メトリックエクスプローラー」で確認できる
+
+![](images/ss-2023-04-05-09-17-47.png)
+
 - アラート作成
   - 「メトリックが特定のしきい値を超えた」といった条件を設定し、アラートを設定できる
   - アラートがトリガーされた際、アクショングループが実行される
@@ -54,7 +57,7 @@ https://learn.microsoft.com/ja-jp/training/paths/provision-manage-azure-cognitiv
     - Azure Container Instance
     - Azure Kubernetes Service
     - Azure Container Apps
-    - Azure IoT Edge
+    - [Azure IoT Edge](../AZ-305/sql-edge.md)
     - オンプレや他クラウド上のKubernetesクラスター
 - [ラボ04 Cognitive Servicesコンテナー](lab04.md)
 
