--- a/AI-102/lp03.md
+++ b/AI-102/lp03.md
@@ -2,18 +2,66 @@
 
 ## モジュール1 言語サービスを使用してテキストから分析情報を抽出する
 
-- リソースの作成
-  - 「Cognitive Services言語サービス」を使用します
-- 言語検出
-- キー フレーズ抽出
-- 感情分析
-- エンティティ
-- リンクされたエンティティ
+■リソースの作成
+
+「言語サービス」リソース、または「Cognitive Servicesマルチサービスアカウント」を使用。
+
+■言語検出
+
+■キー フレーズ抽出
+
+■感情分析
+
+■エンティティ
+
+■リンクされたエンティティ
 
 ## モジュール2 Translator サービスを使用してテキストを翻訳する
 
-- リソースの作成
-- 言語の検出、翻訳、表記変換
-- 翻訳オプション
-- カスタム翻訳
-- [ラボ06 翻訳](lab06.md)
+■リソース
+
+「翻訳」リソース、または「Cognitive Servicesマルチサービスアカウント」を使用。
+
+
+■テキスト翻訳
+
+テキストを別の言語のテキストへと翻訳できる。
+
+1回のリクエストで、複数の言語への翻訳を実行することもできる。
+
+```
+おはようございます
+
+↓ テキスト翻訳
+
+good morning
+bonjour
+早上好
+좋은 아침
+```
+
+■ドキュメント変換
+
+
+元のドキュメント構造とデータ形式を維持しながら、変換を行うことができる。
+
+[対応している形式](https://learn.microsoft.com/ja-jp/azure/cognitive-services/translator/document-translation/overview#supported-document-formats)の例:
+
+- PDF
+- HTML
+- Markdown
+- Word
+- Excel
+- PowerPoint
+
+ドキュメント変換は、[Translator (単一サービス) リソースでのみサポートされている。](https://learn.microsoft.com/ja-jp/azure/cognitive-services/translator/document-translation/quickstarts/get-started-with-rest-api?pivots=programming-language-csharp#prerequisites)
+
+■カスタム翻訳（Custom Translator）
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/translator/custom-translator/beginners-guide
+
+ビジネス、業界、ドメインに固有の用語やスタイルを反映した翻訳システムを構築することができる。
+
+■ラボ
+
+[ラボ06 テキスト翻訳](lab06.md)
