--- a/AI-102/lp03.md
+++ b/AI-102/lp03.md
@@ -6,22 +6,98 @@
 
 「言語サービス」リソース、または「Cognitive Servicesマルチサービスアカウント」を使用。
 
-■言語検出
+■言語検出 language detection
 
-■キー フレーズ抽出
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/language-detection/overview
 
-■感情分析
+ドキュメントを書くのに使われている言語を検出できる。
 
-■エンティティ
+言語の名前・言語コードが返される。
 
-■リンクされたエンティティ
+■キー フレーズ抽出 key phrase extraction
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/key-phrase-extraction/overview
+
+テキスト内の主要な概念をすばやく特定。
+
+https://www.ogis-ri.co.jp/otc/hiroba/technical/similar-document-search/part5.html
+
+「文章からその主題を良く表現している句を抽出する技術」
+
+```
+"食べ物はおいしくて、スタッフがすばらしかった"
+↓
+"食べ物"  "すばらしいスタッフ"
+```
+
+```
+"The food was delicious and the staff were wonderful"
+↓
+"food" and "wonderful staff"
+```
+
+■感情分析 sentiment analytics
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/sentiment-opinion-mining/overview
+
+テキストをマイニングして正または負の感情に関する手がかりを得ることで、人々がブランドやトピックについてどう考えているかを知ることができる。
+
+https://www.cloud-contactcenter.jp/blog/sentiment-analysis-in-business.html
+
+書かれた文章を読み取って、ポジティブな内容か・ネガティブな内容かを判定する分析方法。
+
+応用例: Azure DevOpsの「リリースパイプライン」の「ゲート」への応用
+
+※参考資料 PDF: [Azure DevOpsのパイプライン](https://github.com/hiryamada/notes/blob/89854cb35720fd60c60df1ce09c3eab635ce8381/AZ-400/pdf/Azure%20Pipelines%20%E8%A3%9C%E8%B6%B3.pdf)
+
+「ゲート」は、Azure Pipelinesの「クラシックパイプライン」の機能の一つ。機械的なチェックにより、デプロイの実行やステージ進行をストップさせる機能。
+
+https://devblogs.microsoft.com/bharry/twitter-sentiment-as-a-release-gate/
+
+人気のあるアプリケーションを使用している場合、ユーザーは数秒でそれを認識し、すぐに Twitter にアクセスして問題について質問し始めます。 Twitter は、アプリに何か問題があることを知らせる素晴らしい「アラート」になります。
+
+Twitterのセンチメントを分析し、それに基づいてリリースの進行状況を制御します。
+
+```
+特定機能を特定グループにリリース
+↓
+Twitterハッシュタグを指定してツイートを集める(Logic Apps)
+↓
+感情分析(Cognitive Services)
+↓
+ポジティブなツイートが多い場合は、特定機能をさらに広いユーザー範囲へとリリース
+（ネガティブなツイートが多い場合は、広いユーザー範囲へのリリースをストップさせる）
+```
+
+■エンティティ → 固有表現認識 （NER、Named Entity Recognition）
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/named-entity-recognition/overview
+
+テキスト内のエンティティを識別および分類できます。 たとえば、人、場所、組織、数量など。
+
+```
+I had a wonderful trip to Seattle last week.
+↓
+trip (Event)
+Seattle (Location)
+last week (DateTime)
+```
+
+■エンティティ リンキング entity linking
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/entity-linking/overview
+
+```
+"先週シアトルに出かけました。"
+↓
+Seattle (Location) https://en.wikipedia.org/wiki/Seattle
+```
 
 ## モジュール2 Translator サービスを使用してテキストを翻訳する
 
 ■リソース
 
 「翻訳」リソース、または「Cognitive Servicesマルチサービスアカウント」を使用。
-
 
 ■テキスト翻訳
 
@@ -42,8 +118,7 @@ bonjour
 
 ■ドキュメント変換
 
-
-元のドキュメント構造とデータ形式を維持しながら、変換を行うことができる。
+元のドキュメント構造とデータ形式を維持しながら、翻訳を行うことができる。
 
 [対応している形式](https://learn.microsoft.com/ja-jp/azure/cognitive-services/translator/document-translation/overview#supported-document-formats)の例:
 
