--- a/AI-102/lp04.md
+++ b/AI-102/lp04.md
@@ -2,10 +2,49 @@
 
 https://learn.microsoft.com/ja-jp/training/paths/process-translate-speech-azure-cognitive-speech-services/
 
-- モジュール1 音声サービスを使用して音声対応アプリを作成する
-- モジュール2 音声を音声サービスで翻訳する
+## モジュール1 音声サービスを使用して音声対応アプリを作成する
+
+■リソース
+
+以下のいずれかを使用。
+
+- 「音声」リソース
+- 「Cognitive services マルチサービス アカウント」リソース
+
+■Speech Studio
+
+https://aka.ms/speechstudio/
+
+音声サービスのAPIをすばやく試すことができるWebアプリ。
+
+■音声テキスト変換 speech to text
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/speech-service/speech-to-text
+
+オーディオをテキストにリアルタイムまたはオフラインで文字起こしできる。
+
+リアルタイム変換（マイクなど）、またはバッチ変換（ファイルなど）が利用できる。
+
+■テキスト読み上げ text to speech
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/speech-service/text-to-speech
+
+テキストを人間のような合成音声に変換。
 
 
+## モジュール2 音声を音声サービスで翻訳する
+
+
+## ラボ
+
+- [ラボ07 スピーチ](lab07.md)
+
+<!--
+- ラボ08 スピーチ翻訳
+-->
+
+
+<!--
 ■ ラボ手順書
 
 英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
@@ -18,6 +57,4 @@ https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp
 https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master.zip
 
 ■ ラボの概要
-
-- ラボ07 スピーチ
-- ラボ08 スピーチ翻訳
+-->
