--- a/AI-102/lp06.md
+++ b/AI-102/lp06.md
@@ -10,6 +10,8 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/ques
 
 ユーザーの質問に回答する仕組み。
 
+たとえば、「質問応答」では、[Microsoft Learn のトレーニングについての「よく寄せられる質問」ページ](https://learn.microsoft.com/ja-jp/training/support/faq) を使用して「ナレッジベース」を構築し、ユーザーからの「ラーニング パスとは何ですか？」といった質問に、ナレッジベースを活用して回答することができる。
+
 質問応答は、たとえば「チャットボット」と組み合わせて利用できる。
 
 ```
@@ -24,16 +26,34 @@ Cognitive Services「言語サービス」
   └ナレッジベース
 ```
 
+■「ChatGPT」と「質問応答」は何が違うのか？
+
+「ChatGPT」は、OpenAIが開発したAIチャットボット。インターネットの情報などを使用してトレーニングが行われている。自然な回答を「生成する」ことができる。Azure OpenAI Serviceを通じて利用することもできる。
+
+「質問応答」は、Cognitive Servicesの「言語サービス」に含まれる機能の一つ。あらかじめ開発者が指定したWebページなどを使用して「ナレッジベース」を構築し、そこから、ユーザーの質問に対応する回答を探して回答する。ナレッジベースにない回答を「生成する」ことはしない（できない）。
+
+|                     | 回答を「生成」する？ | ナレッジベースの構築機能 |
+| ------------------- | -------------------- | ------------------------ |
+| ChatGPT(2022/11～)  | Yes                  | なし                     |
+| 質問応答(2020/6～※) | No                   | あり                      |
+
+※[質問応答の前身である「QnA Maker」が2020/6より一般提供開始された。](https://ascii.jp/elem/000/004/015/4015444/2/)
+
+
+「ChatGPT」と「質問応答」は、ユーザーの質問に回答するもの、という意味では、近いといえるが、「ChatGPT」のほうがはるかに膨大なトレーニングを行っているため、より知的な回答を行うことができる。
+
 ■「会話言語理解」（Conversational Language Understanding、CLU）と「質問応答」は何が違うのか？
 
 「CLU」では、ユーザーの入力（発話）から「意図」を決定することはできるが、質問に回答する能力は持たない。（質問に回答する能力を持たせたい場合は、別途そのような仕組みを実装する）
 
-「質問応答」では、ユーザーの入力（質問）を受け付けて、「ナレッジベース」を使用して、対応する回答を探して回答することができる。
+「質問応答」では、ユーザーの入力（質問）を受け、「ナレッジベース」から、対応する回答を探し、回答することができる。
 
 |          | 質問に回答できる？                     | 質問から「意図」と「エンティティ」を抽出できる？ |
 | -------- | -------------------------------------- | ------------------------------------------------ |
 | CLU      | No  （モデル自体は回答能力を持たない） | Yes                                              |
 | 質問応答 | Yes  （ナレッジベースから回答を検索）  | No                                               |
+
+「会話言語理解」は会話文を分析するという基礎的な機能を提供するもの、「質問応答」はユーザーの質問を解決する手段を提供するもの、ともいえる。
 
 ■「質問応答」はどのCognitive Servicesリソースを使用するのか？
 
@@ -106,4 +126,4 @@ https://github.com/MicrosoftLearning/AI-102-AIEngineer/blob/master/Instructions/
 日本語翻訳版の手順書（若干古い可能性があります）
 https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/12-qna-maker.md
 
-※どちらの手順書を使用しでも、英語のナレッジベースが構築されます。質問と回答の文章は英語となります。
+※どちらの手順書を使用しでも、英語のナレッジベースが構築される。質問と回答の文章、p英語となる。
