まとめ追加

--- a/AI-102/lp03.md
+++ b/AI-102/lp03.md
@@ -1,5 +1,19 @@
 # ラーニングパス03 Azure Cognitive Services を使用してテキストを処理して翻訳する
 
+https://learn.microsoft.com/ja-jp/training/paths/process-translate-text-azure-cognitive-services/
+
+■このラーニングパスで学習すること
+
+- Azure Cognitive Servicesの「言語サービス」について理解する。
+  - 「言語検出」: テキストは何語で書かれているか？
+  - 「キー フレーズ抽出」: テキスト内の重要な句はなにか？
+  - 「感情分析」: テキストはポジティブか？ネガティブか？
+  - 「固有表現認識(NER)」: テキストにどのような人・場所・組織などが含まれるか？
+- Azure Cognitive Servicesの「翻訳サービス」について理解する。
+  - テキスト翻訳: テキストを1文ずつ翻訳
+  - ドキュメント変換: PDFなどのファイル形式を維持しつつ翻訳
+  - カスタム翻訳: 業界固有の用語を反映した翻訳
+
 ## モジュール1 言語サービスを使用してテキストから分析情報を抽出する
 
 ■リソースの作成
@@ -140,3 +154,15 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/translator/custom-tra
 ■ラボ
 
 [ラボ06 テキスト翻訳](lab06.md)
+
+■まとめ
+
+- Azure Cognitive Servicesの「言語サービス」について理解しました。
+  - 「言語検出」: テキストは何語で書かれているか？
+  - 「キー フレーズ抽出」: テキスト内の重要な句はなにか？
+  - 「感情分析」: テキストはポジティブか？ネガティブか？
+  - 「固有表現認識(NER)」: テキストにどのような人・場所・組織などが含まれるか？
+- Azure Cognitive Servicesの「翻訳サービス」について理解しました。
+  - テキスト翻訳: テキストを1文ずつ翻訳
+  - ドキュメント変換: PDFなどのファイル形式を維持しつつ翻訳
+  - カスタム翻訳: 業界固有の用語を反映した翻訳
