--- a/AI-102/lp04.md
+++ b/AI-102/lp04.md
@@ -2,6 +2,13 @@
 
 https://learn.microsoft.com/ja-jp/training/paths/process-translate-speech-azure-cognitive-speech-services/
 
+■このラーニングパスで学習すること
+
+- Azure Cognitive Servicesの「音声サービス」について理解する。
+  - 「音声テキスト変換」: 音声をテキストに変換（文字起こし）
+  - 「テキスト読み上げ」: テキストを音声に変換
+
+
 ## モジュール1 音声サービスを使用して音声対応アプリを作成する
 
 ■リソース
@@ -58,3 +65,11 @@ https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master
 
 ■ ラボの概要
 -->
+
+
+■まとめ
+
+- Azure Cognitive Servicesの「音声サービス」について学習しました。
+  - 「音声テキスト変換」: 音声をテキストに変換（文字起こし）
+  - 「テキスト読み上げ」: テキストを音声に変換
+
