まとめ追加

--- a/AI-102/lp05.md
+++ b/AI-102/lp05.md
@@ -1,5 +1,16 @@
 # ラーニングパス05 Azure Cognitive Services を使用して「会話言語理解（CLU）」ソリューションを作成する
 
+■このラーニングパスで学習すること
+
+- Azure Cognitive Servicesの「言語サービス」について（続き）
+  - Language Understanding Intelligent Service (LUIS)
+  - 「会話言語理解」（Conversational Language Understanding、CLU）
+  - モデル
+  - 発話
+  - エンティティ
+  - 意図
+
+
 ※「会話言語理解」（Conversational Language Understanding、CLU）
 
 - モジュール1 CLU モデルを構築する
@@ -98,3 +109,15 @@ https://language.cognitive.azure.com
 
 - [ラボ09 「会話言語理解(CLU)」リソースの作成](lab09.md)
 - [ラボ10 「会話言語理解(CLU)」を使用するアプリの作成](lab10.md)
+
+■まとめ
+
+このラーニングパスでは以下のことを学習しました
+
+- Azure Cognitive Servicesの「言語サービス」
+  - Language Understanding Intelligent Service (LUIS)
+  - 「会話言語理解」（Conversational Language Understanding、CLU）
+  - モデル
+  - 発話
+  - エンティティ
+  - 意図
