--- a/AI-102/lp04.md
+++ b/AI-102/lp04.md
@@ -38,6 +38,19 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/speech-service/text-t
 
 テキストを人間のような合成音声に変換。
 
+様々な音声（男性、女性など）が用意されている。
+
+[voiceNameの一覧](https://learn.microsoft.com/ja-jp/azure/cognitive-services/speech-service/language-support?tabs=tts#supported-languages) （「テキスト読み上げ」タブ内の`ja-JP`の行）
+
+```
+ja-JP-AoiNeural (女性)
+ja-JP-DaichiNeural (男性)
+ja-JP-KeitaNeural (男性)
+ja-JP-MayuNeural1 (女性)
+ja-JP-NanamiNeural (女性)
+ja-JP-NaokiNeural (男性)
+ja-JP-ShioriNeural (女性)
+```
 
 ## モジュール2 音声を音声サービスで翻訳する
 
