--- a/AI-102/lp05.md
+++ b/AI-102/lp05.md
@@ -26,7 +26,7 @@ https://azure.microsoft.com/ja-jp/updates/language-understanding-retirement/
   - 2025 年 10 月 1 日に、サービスは廃止される。
   - LUISのユーザーは、CLUへの移行が必要。
     - [移行方法のドキュメントが提供される](https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/conversational-language-understanding/how-to/migrate-from-luis?tabs=luis-portal)
-  - [2023 年 2 月 2 日以降、認定試験の「スキル領域」が、LUISからCLUに変更される](https://learn.microsoft.com/ja-jp/certifications/resources/study-guides/ai-102#change-log)
+  - [2023 年 2 月 2 日以降、AI-102認定試験の「スキル領域」で、LUISからCLUに変更される](https://learn.microsoft.com/ja-jp/certifications/resources/study-guides/ai-102#change-log)
 - Conversational Language Understanding (CLU):
   - 「会話言語理解」とも
   - [2022 年 6 月 1 日に一般提供が開始されている。](https://azure.microsoft.com/ja-jp/updates/general-availability-conversational-language-understanding/)
