--- a/AI-102/lp05.md
+++ b/AI-102/lp05.md
@@ -22,6 +22,7 @@ https://azure.microsoft.com/ja-jp/updates/language-understanding-retirement/
 
 - Language Understanding Intelligent Service (LUIS):
   - [2017 年 12 月 13 日に発表されたサービス。](https://satonaoki.wordpress.com/2017/12/17/announcing-the-general-availability-of-azure-bot-service-and-language-understanding-enabling-developers-to-build-better-conversational-bots/)
+  - 「チャットボット」などで、自然な言語（ユーザーの命令）を理解できるようにするためのサービス。
   - 2023 年 4 月 1 日以降、新しいリソースを作成することはできなくなる。
   - 2025 年 10 月 1 日に、サービスは廃止される。
   - LUISのユーザーは、CLUへの移行が必要。
@@ -37,25 +38,25 @@ https://azure.microsoft.com/ja-jp/updates/language-understanding-retirement/
 
 CLUは、ユーザーの発話（utterance）から、その「意図」と「エンティティ」を認識する部分の処理を担当する。
 
-例1: ユーザーの発話（utterance）:「3分のタイマーを設定して。」
+例1: ユーザーの発話（utterance）:「 **3分** のタイマーを設定して。」
 
 ```
 ユーザーの意図（インテント、ユーザーがやりたいこと）: タイマーのセット
-エンティティ: 時間: 3分
+エンティティ: 時間 = 3分
 ```
 
-例2: ユーザーの発話（utterance）「品川に移動するには？」
+例2: ユーザーの発話（utterance）「**品川** に移動するには？」
 
 ```
 ユーザーの意図（インテント）: 交通手段の検索
-エンティティ: 場所: 品川
+エンティティ: 場所 = 品川
 ```
 
-例3: ユーザーの発話（utterance）「シーフードのピザを2枚注文して。」
+例3: ユーザーの発話（utterance）「 **シーフードのピザ** を **2枚** 注文して。」
 
 ```
 ユーザーの意図: ピザの注文
-エンティティ: 商品: シーフードピザ、数量: 2枚
+エンティティ: 商品 = シーフードピザ、 数量 = 2枚
 ```
 
 CLUは、会話の意図（タイマーのセット、交通手段の検索、ピザの注文など）と、そこに含まれるエンティティを認識するところまでを担当する。
