--- a/AI-102/lp06.md
+++ b/AI-102/lp06.md
@@ -126,4 +126,4 @@ https://github.com/MicrosoftLearning/AI-102-AIEngineer/blob/master/Instructions/
 日本語翻訳版の手順書（若干古い可能性があります）
 https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/12-qna-maker.md
 
-※どちらの手順書を使用しでも、英語のナレッジベースが構築される。質問と回答の文章、p英語となる。
+※どちらの手順書を使用しでも、英語のナレッジベースが構築される。質問と回答の文章は、英語となる。
