--- a/AI-102/lp07.md
+++ b/AI-102/lp07.md
@@ -16,9 +16,17 @@ https://learn.microsoft.com/ja-jp/training/paths/build-custom-text-analytics/
 
 https://ja.wikipedia.org/wiki/%E5%9B%BA%E6%9C%89%E8%A1%A8%E7%8F%BE%E6%8A%BD%E5%87%BA
 
-NER 機能は、非構造化テキスト内のエンティティを識別および分類できます。
+NER 機能は、非構造化テキスト内のエンティティを識別および分類する。
 
-たとえば、人の名前、場所、組織、数量、メール、URL、IPアドレス、日付・時刻など。
+たとえば、人の名前、場所、組織、数量、メール、URL、IPアドレス、日付・時刻などを検出。
+
+https://nlpcloud.com/ja/nlp-named-entity-recognition-ner-api.html
+
+＞例えば、次のような文章があったとします。
+
+＞「JohnはGoogleのウェブ開発者です。」
+
+＞「John」を名前、「Web developer」を職種、「Google」を会社として自動検出。
 
 ■カスタムNERとは？
 
