--- a/AI-102/lp01.md
+++ b/AI-102/lp01.md
@@ -137,6 +137,8 @@ Cognitive Serviceアカウント
 
 ■参考: Azure OpenAI Service
 
+![](images/ss-2023-04-06-19-46-34.png)
+
 公式サイト:
 https://azure.microsoft.com/ja-jp/products/cognitive-services/openai-service
 
