--- a/AI-102/lp08.md
+++ b/AI-102/lp08.md
@@ -17,17 +17,17 @@ https://learn.microsoft.com/ja-jp/training/paths/create-conversational-ai-soluti
 
 ■ボット
 
-C#またはNode.jsのボットを作成できる
+C#またはNode.jsのボットを作成できる。
+
 ボットに、AIのサービスを組み込むことができる。
 
 ■日本語化
 
-日本語化が可能
-ただしすべてのUIが日本語化されるわけではない。
+日本語化が可能。ただしすべてのUIが日本語化されるわけではない。
+
 左下＞Composer Settings＞composer lanuage＞日本語
 
-ボットの応答なども英語のまま。
-ただし、Configure＞Localization で、ボットの会話を日本語化（ローカライゼーション）することも可能。
+Configure＞Localization で、ボットの会話を日本語化（ローカライゼーション）したり、メッセージを直接日本語化することで、ボットが日本語を出力するようにすることも可能。
 
 
 ■最も簡単な使い方
@@ -46,38 +46,12 @@ Bot Framework Composerを起動
 
 リセットすると、初期状態（あいさつ）からボットとの会話が始まる。
 
-■ボットの構造
-
-```
-ボット
-└ダイアログ
-  └トリガー
-    └アクション
-```
-
-
-
-■ ラボ手順書
-
-英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
-https://github.com/MicrosoftLearning/AI-102-AIEngineer
-
-日本語翻訳版（若干古い可能性があります）
-https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp
-
-ラボのファイル（ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります）
-https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master.zip
-
 ■ ラボの概要
 
-- ラボ13 ボット(TimeBot)の作成
-- ラボ14 ボット(WeatherBot)の作成
-
-https://github.com/MicrosoftLearning/AI-102-AIEngineer/blob/master/Instructions/13-bot-framework.md
-
-https://github.com/MicrosoftLearning/AI-102-AIEngineer/blob/master/Instructions/14-bot-composer.md
-
-https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/13-bot-framework.md
-
-https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/14-bot-composer.md
+- [ラボ13 チャットボット(TimeBot)の作成](lab13.md)
+  - Bot Framework SDKを使用。
+  - C#でコードを記述。
+- [ラボ14 チャットボット(WeatherBot)の作成](lab14.md)
+  - Bot Framework Composerを使用。
+  - コードを記述せず、GUIツールでボットを設計。
 
