--- a/AI-102/lp10.md
+++ b/AI-102/lp10.md
@@ -6,6 +6,37 @@ https://learn.microsoft.com/ja-jp/training/paths/extract-text-from-images-docume
 - モジュール2 Form Recognizer を使用してフォームからデータを抽出する
 
 
+■光学式文字認識 (OCR Optical Character Recognition)
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/computer-vision/overview-ocr
+
+Computer Visionに含まれる機能の一つ。
+
+テキスト認識またはテキスト抽出とも呼ばれる。
+
+画像の中の、手書きまたは印刷のテキスト（文字）を読み取る。
+
+例: このような手書き画像を読み取って「Shopping List」「Non-fat milk」「Bread」「Eggs」というテキストを返す。
+
+![](images/ss-2023-04-07-01-00-17.png)
+
+■Form Recognizer
+
+https://learn.microsoft.com/ja-jp/azure/applied-ai-services/form-recognizer/overview?view=form-recog-3.0.0
+
+光学式文字認識 (OCR) を使用して、請求書・領収書・名刺などの「フォーム」を効率よく読みとる。
+
+ファイル形式は画像やPDFなどに対応。
+
+■ラボ（オプション）手順書
+
+- ラボ20 OCR
+  - [英語版](https://github.com/MicrosoftLearning/AI-102-AIEngineer/blob/master/Instructions/20-ocr.md) [日本語翻訳版](https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/20-ocr.md)
+- ラボ21 Form Recognizer
+  - [英語版](https://github.com/MicrosoftLearning/AI-102-AIEngineer/blob/master/Instructions/21-form-recognizer.md) [日本語版](https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/21-form-recognizer.md)
+
+<!--
+
 ■ ラボ手順書
 
 英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
@@ -21,3 +52,4 @@ https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master
 
 - ラボ20 OCR
 - ラボ21 カスタムフォーム
+-->
