--- a/AI-102/lp11.md
+++ b/AI-102/lp11.md
@@ -5,7 +5,60 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-knowledge-mining-azur
 - Azure Cognitive Search ソリューションを作成する
 - [ラボ22 検索ソリューションの開発](lab22.md)
 
-Azure Cognitive Search (旧称 Azure Search) は、Web、モバイル、エンタープライズ アプリケーションに、プライベートでヘテロジニアスな（さまざまな種類の・均一ではない）コンテンツに対するリッチな検索エクスペリエンスを組み込むためのインフラストラクチャ、API、およびツールを開発者に提供するクラウド検索サービスです。
+■Azure Cognitive Searchとは？
 
-ドキュメントにインデックスを付け、高度な検索を実現します。
+さまざまな
 
+ヘテロジニアスな（さまざまな種類の・均一ではない）コンテンツに対するリッチな検索エクスペリエンスを組み込むためのインフラストラクチャ、API、およびツールを開発者に提供する、クラウド検索サービス。
+
+ドキュメントにインデックスを付け、高度な検索を実現。
+
+ (旧称 Azure Search)
+
+■検索インデックス search index とは？
+
+大量のドキュメントに対する高速な検索ができるように、検索に必要な情報を抽出したもの。
+
+```
+ドキュメント
+↓
+Cognitive Search
+└検索インデックス search index
+  └検索ドキュメント search documents
+```
+
+Cognitive Searchの検索サービスは、検索インデックスに対して検索処理を実行する（元のデータに対する検索は行わない）。
+
+■インデクサー
+
+サポートされている Azure データ ソースからメタデータとコンテンツを読み取ることができるソース固有のクローラー。
+
+Free レベルでは、インデックス、データ ソース、インデクサーがそれぞれ 3 つに限定されている。
+
+■フィールド属性
+
+- searchable
+  - フルテキスト検索可能
+- filterable
+  - $filter クエリでフィルタリングが可能
+- sortable
+  - 並べ替えが可能
+- facetable
+- retrievable
+  - 検索結果でこのフィールドを返すことができる
+
+■AIエンリッチメントとは？
+
+https://learn.microsoft.com/ja-jp/azure/search/cognitive-search-concept-intro
+
+そのままの形式ではフルテキスト検索できないコンテンツに対して、機械学習モデルを適用することで、コンテンツを検索可能にすること。
+
+たとえばPDFや画像などに対して「AIエンリッチメント」を行うことで、画像に対するキーワード検索などを実行できるようになる。
+
+```
+画像やPDF
+↓AIエンリッチメント
+画像の説明文など
+↓
+検索インデックス
+```
