--- a/AI-102/lp09.md
+++ b/AI-102/lp09.md
@@ -3,19 +3,66 @@
 https://learn.microsoft.com/ja-jp/training/paths/create-computer-vision-solutions-azure-cognitive-services/
 
 
-- 画像を分析する
-- 動画を分析する
-- 画像を分類する
-- 画像内のオブジェクトを検出する
-- 顔を検出、分析、認識する
+■画像の説明 describing images
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/computer-vision/concept-describing-images
+
+与えられた画像の説明文を生成。
+
+たとえば猫の画像を読み込ませると「コンピューターのそばに座っている猫」といった説明文を生成。
+
+このあとのラボで実施。
+
+■オブジェクトの検出 object detection
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/computer-vision/concept-object-detection
+
+画像内に含まれる様々なモノ（コンピューター、コップ、自転車など）や人物を検出。
+
+検出されたそれぞれのモノや人物に対し:
+- タグ付け（「computer」「cup」「bicycle」「person」など）。
+- 座標を生成(top/left/width/height)。
+
+■ブランド検出 brand detection
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/computer-vision/concept-brand-detection
+
+画像内のブランド（企業のロゴなど）を検出。
+
+検出されたそれぞれのモノや人物に対し:
+- ブランド名を生成。
+- 座標を生成(top/left/width/height)。
+
+■顔検出 face detection
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/computer-vision/concept-detecting-faces
+
+画像内の人間の顔を検出。
+
+検出されたそれぞれの顔に対し:
+- 年齢を判定
+- 性別を判定
+- 座標を生成(top/left/width/height)。
 
 ■Face APIについて
+
+- 機能へのアクセスが制限される場合がある。
+- 感情・性別・表情などを予測するAPIは廃止される。
 
 https://azure.microsoft.com/ja-jp/updates/facelimitedaccess/
 
 https://cptechweb.teldevice.co.jp/hc/ja/articles/8632634468249--%E9%87%8D%E8%A6%81-Cognitive-Services-Face-API-%E3%81%AE%E5%BB%83%E6%AD%A2%E3%81%A8%E5%88%A9%E7%94%A8%E5%88%B6%E9%99%90%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6
 
 https://www.itmedia.co.jp/news/articles/2206/22/news086.html
+
+＞プライバシーについての懸念の高まりなどを受けての決定
+
+■ ラボ
+
+- [ラボ15 コンピュータビジョン](lab15.md)
+
+<!--
+
 
 ■ ラボ手順書
 
@@ -28,10 +75,8 @@ https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp
 ラボのファイル（ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります）
 https://github.com/MicrosoftLearning/AI-102-AIEngineer/archive/refs/heads/master.zip
 
-■ ラボの概要
-
-- ラボ15 コンピュータビジョン
 - ラボ16 ビデオインデクサー
 - ラボ17 イメージ分類
 - ラボ18 オブジェクト検出
 - ラボ19 フェース
+-->
