--- a/AI-102/lp06.md
+++ b/AI-102/lp06.md
@@ -127,3 +127,19 @@ https://github.com/MicrosoftLearning/AI-102-AIEngineer/blob/master/Instructions/
 https://github.com/MicrosoftLearning/AI-102-AIEngineer.ja-jp/blob/main/Instructions/12-qna-maker.md
 
 ※どちらの手順書を使用しでも、英語のナレッジベースが構築される。質問と回答の文章は、英語となる。
+
+■補足:
+
+```
+Azure Cognitive Services
+└言語サービス
+  └カスタム質問応答 (以前の QnA Maker): Language Studioで開発
+      │ ├チットチャット
+      │ └ナレッジベース <--- 外部のFAQページ等
+      │
+      ↓ デプロイ
+Azure Bot Service
+└チャットボット ───── Webチャット
+```
+
+![](images/ss-2023-04-07-09-13-00.png)
